--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Sans:ital,wdth,wght@0,91,100..900;1,91,100..900&family=Metamorphous&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body{
-  font-family: 'Averia Serif Libre', serif;
+  font-family: 'Mulish', serif;
 }
 
 h1, h2, h3, h4 {
-  font-family: "Metamorphous";
+  font-family: "Mulish";
   font-weight: 700;
   font-style: normal;
+  text-transform: uppercase;  
 }
 
 tr:nth-child(even) td{
