Separated Index and Readme

--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,5 +1,3 @@
 <footer class="site-footer">
-	<p>Unless otherwise specified, the text on this website is licensed under <a
-	href=\"https://creativecommons.org/licenses/by-sa/4.0\">CC-BY-SA 4.0</a>.
-	Theme by <a href="https://just-the-docs.com">Just the Docs</a>, licensed under the <a href=https://en.wikipedia.org/wiki/MIT_License">MIT License</a>.</p>
+	<p>Images & text from <a href="https://degenesis.com/">degenesis.com</a> are adapted for private use only. Copyright &copy; 2021 by SIXMOREVODKA.</p>
 </footer>
