Changed font to Nunito

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body{
-  font-family: 'Mulish', serif;
+  font-family: 'Nunito', serif;
   font-weight: 500;  
 }
 
 h1, h2, h3, h4 {
-  font-family: "Mulish";
+  font-family: "Nunito";
   font-weight: 700;
   font-style: normal;
   text-transform: uppercase;  
