--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-	<p>Images & text from <a href="https://degenesis.com/">degenesis.com</a> are adapted for private use only. Copyright &copy; 2021 by SIXMOREVODKA.</p>
+	<p><b>Fan Content material:</b> Images & text from <a href="https://degenesis.com/">degenesis.com</a> are adapted for private use only. Copyright &copy; 2021 by SIXMOREVODKA.</p>
 </footer>
