Prep for 24xx game - chargen

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poiret+One&display=swap');
 
 body{
   font-family: 'Nunito', serif;
@@ -6,8 +6,8 @@ body{
 }
 
 h1, h2, h3, h4 {
-  font-family: "Nunito";
-  font-weight: 400;
+  font-family: "Poiret One";
+  font-weight: 700;
   font-style: normal;
   text-transform: uppercase;  
 }
