--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&display=swap');
 
 body{
-  font-family: 'Nunito', serif;
-  font-weight: 400;  
+  font-family: 'Noto Sans Display', serif;
+  font-weight: 350;  
 }
 
 h1, h2, h3, h4 {
-  font-family: "Poiret One";
-  font-weight: 700;
+  font-family: "Noto Serif Display";
+  font-weight: 350;
   font-style: normal;
   text-transform: uppercase;  
 }
