--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap');
 
 body{
-  font-family: 'Noto Sans Display', serif;
+  font-family: 'Ubuntu Sans';
   font-weight: 350;  
 }
 
 h1, h2, h3, h4 {
-  font-family: "Noto Serif Display";
-  font-weight: 400;
+  font-family: "Noto Sans Display";
+  font-weight: 350;
   font-style: normal;
   text-transform: uppercase;  
 }
