--- a/_includes/connected_to.html
+++ b/_includes/connected_to.html
@@ -1,8 +1,4 @@
-{% if page.title == 'Home' %}
-
-{% assign all_references =  site.pages | where_exp:"item", "item.nav_exclude != true" | sort: 'nav_order'%}
-
-{% elsif page.title != 'Directory' %}
+{% if page.title != 'Directory' %}
 
 {% assign children_pages = site.pages | where: 'parent', page.title %}
 
@@ -12,7 +8,7 @@
 	{% assign links_pages = links_pages | push: captured_page[0] | uniq %}
 {% endfor %}
 
-{% assign all_references = children_pages | push: links_pages | uniq | sort: 'nav_order' %}
+{% assign all_references = children_pages | push: links_pages | uniq | sort: 'nav_order' | where_exp:"item", "item.nav_exclude != true" %}
 
 {% else %}
 
@@ -42,7 +38,7 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
 <div class="image-gallery">
   {% for image in page.images %}
     <a href="{{ site.url }}{{ image | relative_url }}" title="{{ page.title }}">
-      <img src="//wsrv.nl/?url={{ site.url }}{{ image | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ page.title }}"/>
+      <img src="//wsrv.nl/?url={{ site.url }}{{ image | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ page.title }}"/>
     </a>
   {% endfor %}
 </div>
@@ -59,6 +55,8 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
   {% endfor %}
 {% elsif count > 0 %}
 
+---
+
 {% endif %}
 
 {% assign count = all_references | where: 'type', 'people' | size %}
@@ -74,12 +72,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
       {% if my_page.images %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/unsettled/imgs/people.png&w=300&h=300&output=jpg&q=50&t=square&bg=27262b" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/09-FROM-HELL-MARAUDERS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
       {% endif %}
     {% endif %}
@@ -101,12 +99,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
       {% if my_page.images %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/unsettled/imgs/faction.png&w=300&h=300&output=jpg&q=50&t=square&bg=27262b" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/00-FROM-HELL-PSYCHONAUTICS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
       {% endif %}
     {% endif %}
@@ -128,12 +126,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
       {% if my_page.images %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/unsettled/imgs/location.png&w=300&h=300&output=jpg&q=50&t=square&bg=27262b" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/01-FROM-HELL-BIOKINETICS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
       {% endif %}
     {% endif %}
@@ -155,12 +153,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
       {% if my_page.images %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.title }}</span>
-          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/unsettled/imgs/folklore.png&w=300&h=300&output=jpg&q=50&t=square&bg=27262b" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/07-FROM-HELL-AMSUMOS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
       {% endif %}
     {% endif %}
@@ -182,12 +180,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
       {% if my_page.images %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.nav_order | date: "%B %-d" }}</span>
-          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
         <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
           <span>{{ my_page.nav_order | date: "%B %-d" }}</span>
-          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/unsettled/imgs/chapter.png&w=300&h=300&output=jpg&q=50&t=square&bg=27262b" alt="{{ my_page.title }}"/>
+          <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/06-FROM-HELL-LEVIATHANS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a>   
       {% endif %}
     {% endif %}
