--- a/_includes/connected_to.html
+++ b/_includes/connected_to.html
@@ -1,4 +1,12 @@
-{% if page.title != 'Directory' %}
+{% if page.title == 'Directory' %}
+
+{% assign all_references =  site.pages | where_exp:"item", "item.path contains 'directory/'" | where_exp:"item", "item.nav_exclude != true" %}
+
+{% elsif page.title == 'Gazetteer' %}
+
+{% assign all_references =  site.pages | where_exp:"item", "item.path contains 'gazetteer/'" | where_exp:"item", "item.nav_exclude != true" %}
+
+{% else %}
 
 {% assign children_pages = site.pages | where: 'parent', page.title %}
 
@@ -9,10 +17,6 @@
 {% endfor %}
 
 {% assign all_references = children_pages | push: links_pages | uniq | sort: 'nav_order' | where_exp:"item", "item.nav_exclude != true" %}
-
-{% else %}
-
-{% assign all_references =  site.pages | where_exp:"item", "item.path contains 'directory/'" | where_exp:"item", "item.nav_exclude != true" %}
 
 {% endif %}
 
@@ -38,13 +42,13 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
   {% for my_page in all_references %}
     {% if my_page.type == 'people' %}
       {% if my_page.images %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
-          <span>{{ my_page.title }}</span>
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
+          <span>{{ my_page.status }} {{ my_page.title }}</span>
           <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
-          <span>{{ my_page.title }}</span>
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
+          <span>{{ my_page.status }} {{ my_page.title }}</span>
           <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/09-FROM-HELL-MARAUDERS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
       {% endif %}
@@ -65,12 +69,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
   {% for my_page in all_references %}
     {% if my_page.type == 'faction' %}
       {% if my_page.images %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.title }}</span>
           <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.title }}</span>
           <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/00-FROM-HELL-PSYCHONAUTICS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
@@ -92,12 +96,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
   {% for my_page in all_references %}
     {% if my_page.type == 'location' %}
       {% if my_page.images %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.title }}</span>
           <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.title }}</span>
           <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/01-FROM-HELL-BIOKINETICS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
@@ -119,12 +123,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
   {% for my_page in all_references %}
     {% if my_page.type == 'creature' %}
       {% if my_page.images %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.title }}</span>
           <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.title }}</span>
           <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/07-FROM-HELL-AMSUMOS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a> 
@@ -146,12 +150,12 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
   {% for my_page in all_references %}
     {% if my_page.type == 'session' %}
       {% if my_page.images %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.nav_order | date: "%B %-d" }}</span>
           <img src="//wsrv.nl/?url={{ site.url }}{{ my_page.images[0] | relative_url }}&w=300&h=300&output=jpg&q=50&t=square&bg=white" alt="{{ my_page.title }}"/>
         </a>
       {% else %}
-        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.title }}">
+        <a href="{{ site.url }}{{ my_page.url }}" title="{{ my_page.role }}">
           <span>{{ my_page.nav_order | date: "%B %-d" }}</span>
           <img src="//wsrv.nl/?url=https://terra-campaigns.github.io/degenesis/imgs/DEGENESIS-LOGOTYPES-PACK/FROM-HELL LOGOS SVG/06-FROM-HELL-LEVIATHANS.svg&w=300&h=300&output=jpg&q=50&t=square&bg=white&bg=white" alt="{{ my_page.title }}"/>
         </a>   
