fixing images poorly displayed

--- a/_includes/connected_to.html
+++ b/_includes/connected_to.html
@@ -31,6 +31,34 @@ Image gallery based on https://jekyllcodex.org/without-plugin/image-gallery/#
   .image-gallery a img {width: 100%; display: block;}
 </style>
 
+<style>
+  .image-gallery2 {overflow: auto; margin-left: -1%!important;}
+  .image-gallery2 a {float: left; display: block; margin: 0 0 1% 1%; width: 38%; text-align: center; text-decoration: none!important;}
+  .image-gallery2 a span {display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding: 3px 0;}
+  .image-gallery2 a img {width: 100%; display: block;}
+</style>
+
+{% assign count = page.images | size %}
+{% if count > 0 %}
+
+<p>
+  <br>
+</p>
+{: .text-delta }
+
+<div class="image-gallery2">
+  {% for image in page.images %}
+    <a href="{{ site.url }}{{ image | relative_url }}" title="{{ page.title }}">
+      <img src="//wsrv.nl/?url={{ site.url }}{{ image | relative_url }}&w=600&h=600&output=jpg&q=50&t=square" alt="{{ page.title }}"/>
+    </a>
+  {% endfor %}
+</div>
+{: .text-delta }
+{% endif %}
+
+{{ page.flavour }} 
+{: .fs-3 }
+
 {% assign count = all_references | where: 'type', 'people' | size %}
 {% if count > 0 %}
 <p>
